Created simple statistics
